<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mat" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="a131"
        android:id="@+id/editTextMatricule"
        android:hint="@string/insmat"
        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mdp" />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="azerty"
        android:id="@+id/editTextMdp"
        android:hint="@string/insmdp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bouton_valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val"
            />
        <Button
            android:id="@+id/bouton_annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ann"
            />
    </LinearLayout>


</LinearLayout>
