<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie"
        />

    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="306dp"
        android:layout_height="384dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pra"
        />

    <Spinner
        android:id="@+id/spinpra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot"
        />
    <Spinner
        android:id="@+id/spinmotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/editext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Bilan"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/deco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
             />
        <Button
            android:id="@+id/creer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr" />
    </LinearLayout>
</LinearLayout>