<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_rv" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bouton_consulter"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:text="@string/menu_cons" />

        <Button
            android:id="@+id/bouton_saisir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:text="@string/menu_sais" />
    </LinearLayout>

</LinearLayout>